# 2script

./: .coverage  .pre-commit-config.yaml  COMPREHENSIVE_TODO.md  FINAL_ANALYSIS.md  Itau_2025-05_enhanced.csv  Makefile  README.md  README_ULTIMATE.md  TABLE_EXTRACTION_GUIDE.md  TESTING_SUMMARY.md  ULTIMATE_PARSER_TEST_REPORT.md  advanced_extraction.csv  advanced_extraction_v2.csv  advanced_text_extractor.py  ai_config.yaml  ai_enhanced_parser.py  analyze_all_results.py  card_number_mapper.py  codex.py  compare_all_parsers.py  comprehensive_pdf_extractor.py  comprehensive_transactions.csv  comprehensive_validator.py  csv_comparator.py  current_best.csv  debug_pdf_structure.py  debug_validator.py  detailed_analysis.py  enhanced_codex.py  enhanced_comparison.json  enhanced_detailed_comparison.json  final_advanced.csv  final_advanced_v2.csv  final_advanced_v3.csv  final_validation.json  find_overlap.py  fixed_output.csv  flat_txt_repair.py  golden_comparison.py  golden_guided_parser.py  (+36 more)
.github/workflows/: ci.yml  cron-validation.yml
.lsp/.cache/: db.transit.json
.trunk/: trunk.yaml
all_pdfs_output/: ALL_TRANSACTIONS_COMBINED.csv  COMPREHENSIVE_ANALYSIS.json  PROCESSING_SUMMARY.md  SIMPLE_ANALYSIS.md
all_pdfs_output/Itau_2024-05/: Itau_2024-05_cards.csv  Itau_2024-05_final.csv  Itau_2024-05_parallel.csv
all_pdfs_output/Itau_2024-06/: Itau_2024-06_cards.csv  (+2 more)
best_outputs/: README.md
chroma_db/: chroma.sqlite3
docs/: FUTURE_MODIFICATIONS_GUIDE.md  GOLDEN_GUIDED_PARSING.md
lab/: parser_utils.py  script.py
lab2/: Itau_2024-10_ultimate.csv  README.md  itau_parser_config.yaml  itau_parser_ultimate.py
new_patterns/: layout_map.json  patterns.json
notebooks/: ai_parser_analysis.ipynb
old_scripts/: script 2.py  text_to_csv 2.py
production_parser/: README.md
scripts/: ci_local.sh  quality_gates.py
test/: test_learning_engine.py
test_output/: Itau_2025-05_parsed.csv
test_outputs/: Itau_2024-10.txt  Itau_2025-05.txt  codex_Itau_2024-10.csv  codex_Itau_2025-05.csv  pdf_to_csv_Itau_2024-10.csv  pdf_to_csv_Itau_2025-05.csv  test_report.json  text_to_csv_Itau_2024-10.csv  text_to_csv_Itau_2025-05.csv
tests/: conftest.py  test_parser_accuracy.py
(+74 files in other folders)
